--- a/app/views/restaurants/_form.html.erb
+++ b/app/views/restaurants/_form.html.erb
@@ -12,6 +12,12 @@
 
 	<%= f.label :open %>
 	<%= f.check_box :open %>
+
+	<br />
+
+	<%= f.label :initial_state %>
+	<%= f.select :initial_state, [1, 2, 3, 4] %> 
+
 	<%= fields_for "restaurant[hours]" do |i| %>
 	<table class="table">
 		<tr>
