--- a/app/views/application/select_stadium.html.erb
+++ b/app/views/application/select_stadium.html.erb
@@ -1,7 +1,6 @@
 <h2 class="headline">Select your Location:</h2>
 <div class="list-group">
 	<% @locations.each do |location| %>
-		<%=link_to(location.name, {:action => "select_vendor", :object_id  => location.id}, :class=>"list-group-item open") if location.is_open?%> 
-		
+		<%= location.is_open? ? link_to(location.name, {:action => "select_vendor", :object_id  => location.id}, :class=>"list-group-item open") : link_to(location.name + " - Currently Closed", '#', :class=>"list-group-item list-group-item-danger") if !location.hide_when_closed?%> 
 	<% end %>
 
