working on creating form ating form to manage a bank account

--- a/app/assets/stylesheets/orders.css.scss
+++ b/app/assets/stylesheets/orders.css.scss
@@ -2,7 +2,7 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-.subtotal {
+table.subtotal {
 	background-color: rgb(245, 245, 245);
 	border-top-color: #DDD;
 	border-top-width: 1px;
