can create a bank accountt

--- a/app/views/restaurants/bank_account.html.erb
+++ b/app/views/restaurants/bank_account.html.erb
@@ -6,10 +6,14 @@
 </script>
 
 
-<%= form_tag(save_bank_account_restaurant_path(@restaurant), :method => "POST", :id => "bank-form") do  %>
+<%= form_tag("", :method => "POST") do  %>
 	Routing Number: <%= text_field_tag :routing_number %> <br />
 	Account Number: <%= text_field_tag :account_number %> <br />
 	<%= submit_tag "Submit" %>
 <% end %>
 
+
+<%= form_tag(save_bank_account_restaurant_path(@restaurant), :method => "POST", :id=>"bank-form") do %>
+
+<% end %>
 
