--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -3,14 +3,14 @@
 
 	<div class="well">
 		<div>
-			<strong> Amount Available: <%= Order.first.integer_to_currency @amount %> </strong><br />
+			<strong> Amount Available: </strong> <%= Order.first.integer_to_currency @amount %><br />
 			<button type="button" class="btn btn-success">Withdraw</button>  <button class="btn btn-info"> View Recent Orders </button>
 		</div>
 
 
 
 		<div style="padding-top:10px; padding-bottom:30px;">
-			<strong>Bank Account:		</strong>
+			<strong>Bank Account: 	</strong> <%= @account.bank_name %> <%= @account.last4 %>	
 			<%= button_to "Change Bank Account", bank_account_restaurant_path(@restaurant), { :class => "btn btn-primary", :method => 'get' } %>
 		</div>
 
