--- a/app/views/shnack/manage_vendors.html.erb
+++ b/app/views/shnack/manage_vendors.html.erb
@@ -1,4 +1,4 @@
-
+<h3> Manage Vendors </h3>
 <% @locations.each do |location| %>
 	<% if location.instance_of?(Stadium) %>
 	<div class="panel panel-default">
