--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -4,7 +4,9 @@
 	<div class="well">
 		<div>
 			<strong> Amount Available: </strong> <%= Order.first.integer_to_currency @amount %><br />
-			<button type="button" class="btn btn-success">Withdraw</button>  <button class="btn btn-info"> View Recent Orders </button>
+			<%= button_to "Withdraw", withdraw_funds_restaurant_path(@restaurant), { :class => "btn btn-success", :method => 'post' } %>
+			<br />
+			<%= button_to "Recent Orders", recent_orders_restaurant_path(@restaurant), {:method => 'get', :class => "btn btn-info" } %>
 		</div>
 
 
@@ -70,20 +72,31 @@
 		<% end %>
 	</table>
 
+	<% if current_user.is_super? %>
+		<table class="table">
+			
+			<tr> <th colspan="2"> Managers </th> </tr>
+			<% @restaurant.roles.each do |role| %>
+				<tr> <td> <%= role.user.email %> </td></tr>
+			<% end %>
 
-	<table class="table">
-		<tr> <th colspan="2"> Managers </th> </tr>
+			
+			<%= form_tag add_manager_restaurant_path(@restaurant)  do %>
+			<tr>
+				<td> Add Manager By Email </td>
+				<td> <%= text_field_tag :email %> </td>
+			</tr>
+			<tr>
+				<td colspan="2"> 
+					<%= submit_tag %>
+				</td>
+			</tr>
 
-		
-		
-		<tr>
-			<td> Add Manager By Email </td>
-			<td> <%= text_field_tag :email %> </td>
-		</tr>
-		<tr>
-			<td colspan="2"> 
+			<% end %>
+					
 
-	</table>
+		</table>
+	<% end %>
 
 	<ul class="list-group">
 		<li class="list-group-item">
