--- a/app/views/shared/_order_details.html.erb
+++ b/app/views/shared/_order_details.html.erb
@@ -24,7 +24,7 @@
 					<td> <%= @order.integer_to_currency(@order.subtotal) %> </td>
 				</tr>
 				<tr>
-					<td>Tax</td>
+					<td>Shnack Fee</td>
 					<td></td>
 					<td></td>
 					<td> <%= @order.integer_to_currency(@order.total-@order.subtotal) %></td>
