--- a/app/views/charges/new.html.erb
+++ b/app/views/charges/new.html.erb
@@ -4,8 +4,10 @@
 	<%= render 'shared/order_details' %>
 
   <% if user_signed_in? && !current_user.number.nil? %>
+    <%= text_field(:user, :name, :class=> "form-control", :id => "order-name", :value => current_user.name ) %>
     <%= telephone_field(:user, :phone, :class=>"form-control", :id => "order-phone-number", :value => current_user.number) %>
   <% else %>
+    <%= text_field(:user, :name, :class=> "form-control", :id => "order-name", :placeholder => "Name" ) %>
   	<%= telephone_field(:user, :phone, :class => "form-control",:id => "order-phone-number", :placeholder => "Phone #") %>
   <% end %>
 	<br />
