added views and controller work

--- a/app/views/restaurants/_new_item_size.html.erb
+++ b/app/views/restaurants/_new_item_size.html.erb
@@ -1,15 +1,15 @@
 <table id="size_mod_table">
   <tbody>
     <tr>
-      <td> <%= text_field_tag "n1", nil, :placeholder=>"Size Name 1" %> </td>
-      <td> <%= text_field_tag "p1", nil, :type=>"number", :placeholder=>"Price 1" %> </td>
+      <td> <%= text_field_tag :size_name_1, nil, :placeholder=>"Size 1 Name" %> </td>
+      <td> <%= text_field_tag :size_price_1, nil, :type=>"number", :placeholder=>"Price 1" %> </td>
     </tr>
-      <td> <%= text_field_tag "n2", nil, :placeholder=>"Size Name 2" %> </td>
-      <td> <%= text_field_tag "p2", nil, :type=>"number", :placeholder=>"Price 2" %> </td>
+      <td> <%= text_field_tag :size_name_2, nil, :placeholder=>"Size 2 Name" %> </td>
+      <td> <%= text_field_tag :size_price_2, nil, :type=>"number", :placeholder=>"Price 2" %> </td>
     </tr>
     <tr>
-      <td> <%= text_field_tag "n3", nil, :placeholder=>"Size Name 3" %> </td>
-      <td> <%= text_field_tag "p3", nil, :type=>"number", :placeholder=>"Price 3" %> </td>
+      <td> <%= text_field_tag :size_name_3, nil, :placeholder=>"Size 3 Name" %> </td>
+      <td> <%= text_field_tag :size_price_3, nil, :type=>"number", :placeholder=>"Price 3" %> </td>
     </tr>
   </tbody>
 </table>
