--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -46,13 +46,16 @@
                 <% end %>
               </tr>
 
-              <tr id="<%=item.id%>_mod" style="display:none;border:none;outline:none;">
-                <td colspan="5">
-                  <div class="well">
-                    <i>Customize this <%= item.name.downcase %></i>
-                  </div>
-                </td>
-              </tr>
+							<%# if item.has_instance_of?(Modifier) %>
+              <% if @item.has_mod? %>
+		            <tr id="<%=item.id%>_mod" style="display:none;border:none;outline:none;">
+		              <td colspan="5">
+		                <div class="well">
+		                  <i>Customize this <%= item.name.downcase %></i>
+		                </div>
+		              </td>
+		            </tr>
+								<% end %>
             </tbody>
            
         <% end %>
