--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -39,19 +39,35 @@
 <div class ="panel panel-default">
 	<% @restaurant.menu.categories.each do |category| %>
 	<div class="panel-heading top-heading"><h3 class="panel-title"><%= category.name %></h3></div>
-	<table class="item-list">
+	<table class="table">
 		<% category.items.each do |item| %>
-		<tr class="item-name">
-			<td ><%= item.name %></td>
-			<td class="text-right"><%= Item.integer_to_currency item.price %></td>
-			<td class="text-right" style="width:5%"><%= link_to content_tag(:span, nil, :class=> "glyphicon glyphicon-minus"), { :controller => 'menu', :action => 'delete_item', :item_id => item.id } %></td>
-		</tr>
+			<tbody>
+				<tr class="item-name">
+					<td ><%= item.name %></td>
+					<td class="text-right"><%= Item.integer_to_currency item.price %></td>
+					<td class="text-right" style="width:5%"><%= link_to content_tag(:span, nil, :class=> "glyphicon glyphicon-minus"), { :controller => 'menu', :action => 'delete_item', :item_id => item.id } %></td>
+				</tr>
+			</tbody>
+
 			<% if item.modifiers.size > 0 %>
-				<% item.modifiers.each do |mod| %>
-					<tr class="item-modifier">
-						<td class="modifier-name"> <%= mod.name %> </td>
-					</tr>
-				<% end %>
+				<tbody style="background-color:#F9F9F9;">
+					<% item.modifiers.each do |mod| %>
+						<%  unless mod.name.empty? %>
+							<tr class="item-modifier">
+								<td class="modifier-name" colspan="3"> <em> <%= mod.name.capitalize %> </em> </td>
+									
+									<% mod.options.each do |val| %>
+										<%  unless val.name.empty? %>
+											<tr>
+												<td colspan="2"> <%= val.name.capitalize %> </td>
+												<td>$<%= val.price %></td>
+											</tr>
+										<% end %>
+									<% end %>
+								</tr>
+							<% end %>
+					<% end %>
+				</tbody>
 			<% end %>
 		<% end %>
 	</table>
