--- a/app/assets/stylesheets/sign_in.css.scss
+++ b/app/assets/stylesheets/sign_in.css.scss
@@ -10,9 +10,9 @@ input, textarea {
 	} 
 }
 input, textarea {
-  box-shadow: rgba(0,0,0, 0.1) 0px 0px 8px;
+  /*box-shadow: rgba(0,0,0, 0.1) 0px 0px 8px;
   -moz-box-shadow: rgba(0,0,0, 0.1) 0px 0px 8px;
-  -webkit-box-shadow: rgba(0,0,0, 0.1) 0px 0px 8px;
+  -webkit-box-shadow: rgba(0,0,0, 0.1) 0px 0px 8px;*/
   }
 
   .buttn {
