--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -24,65 +24,49 @@
       <% @menu.categories.each do |category| %>
         <div class="panel-heading"><h3 class="panel-title"><%= category.name %></h3></div>
         <div class="order-items" style="display:none;">
-        <table cellspacing="10" class="table">
-    
+          <table cellspacing="10" class="table">
 
-        <% category.items.each do |item| %>
+          <% category.items.each do |item| %>
             <tbody class="menu_item" data-id= "<%= item.id %>" style="border:none;outline:none;">
               <tr>
-                <td><%= item.name %><br/></td>
-
+                <td><%= item.name %></td>
                 <td id="<%=item.id%>_price" data-price="<%=item.price%>"><%= Item.integer_to_currency item.price %></td>
                 <% if(item.sold_out) %>
                   <td colspan="3">Item Sold Out</td>
-                <% else %>
-                  <td> 
-                  <span class="glyphicon glyphicon-plus plus"></span>
-                  </td>
+                <% else %> 
+                  <td> <span class="glyphicon glyphicon-plus plus"></span> </td>
                   <td id="<%=item.id%>_num" class="num"> 0 </td>
                   <td> <span class="glyphicon glyphicon-minus minus"></span> </td>
-                  <td class="item_id hidden"><%= item.id %></td>
-                    <%= f.hidden_field "item[#{item.id}]", :value => 0, :class => "item_#{item.id}" %>
+                  <td class="item_id hidden"> <%= item.id %> </td>
+                  <%= f.hidden_field "item[#{item.id}]", :value => 0, :class => "item_#{item.id}" %>
+
+                  <% if item.has_mod?; @item = item%>
+                    <%= render :partial => 'display_mods', :locals => { item: @item } %>
+                  <% end %>
                 <% end %>
               </tr>
-
-              <% if item.has_mod? %>
-		            <tr id="<%=item.id%>_mod" style="border:none;outline:none;">
-		              <td colspan="5">
-		                <div class="well well-sm">
-		                  <i>Customize this <%= item.name.downcase %></i>
-		                </div>
-		              </td>
-		            </tr>
-								<% end %>
             </tbody>
-           
-        <% end %>
+          <%end%>
         </table>
       </div>
-      <% end %>
+    <% end %>
     <% else %>
       <table cellspacing="10" class="table" >
-      
-     
-          <% @menu.items.each do |item| %>
-            <tr class="menu_item" data-id="<%=item.id%>">
-              <td><%= item.name %></td>
-              <td id="<%=item.id%>_price" data-price="<%=item.price%>"><%= Item.integer_to_currency item.price %></td>
-                        <% if(item.sold_out) %>
-                <td colspan="3">Item Sold Out</td>
-              <% else %>
-                <td> 
-                <span class="glyphicon glyphicon-plus plus"></span>
-                </td>
-                <td id="<%=item.id%>_num" class="num"> 0 </td>
-                <td> <span class="glyphicon glyphicon-minus minus"></span> </td>
-                <td class="item_id hidden"><%= item.id %></td>
-                  <%= f.hidden_field "item[#{item.id}]", :value => 0, :class => "item_#{item.id}" %>
-              <% end %>
-
-            </tr>
-          <% end %>
+        <% @menu.items.each do |item| %>
+          <tr class="menu_item" data-id="<%=item.id%>">
+            <td><%= item.name %></td>
+            <td id="<%=item.id%>_price" data-price="<%=item.price%>"><%= Item.integer_to_currency item.price %></td>
+            <% if(item.sold_out) %>
+              <td colspan="3">Item Sold Out</td>
+            <% else %>
+              <td> <span class="glyphicon glyphicon-plus plus"></span> </td>
+              <td id="<%=item.id%>_num" class="num"> 0 </td>
+              <td> <span class="glyphicon glyphicon-minus minus"></span> </td>
+              <td class="item_id hidden"><%= item.id %></td>
+              <%= f.hidden_field "item[#{item.id}]", :value => 0, :class => "item_#{item.id}" %>
+            <% end %>
+          </tr>
+        <% end %>
       </table>
     <% end %>
 
