added caje info

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -72,6 +72,14 @@
 			</div>
 		</div>
 
+		<div class="level">
+			<div class="container my-container caje-info">
+				<span class="shnack">Shnack</span> is now being used at Caje<br />
+				<strong>Order ahead. Skip the line.</strong>
+				<br/>
+					<p> Every order enters you for the chance to win a Logitech Speaker System!
+			</div>
+		</div>
 
 		<div id="level-2">
 			<div class="row">
@@ -146,9 +154,6 @@
 		<div id="footer">
 			<div class="row">
 
-				<div class="col-sm-6 center">
-	          		<%= image_tag("nvc.png", :class => "nvc-logo")   %>
-	          	</div>
 
 				<div class="col-sm-6 center">
 		            <div id="fb-root"></div>
