--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -52,6 +52,13 @@ p {
 	background-image: linear-gradient(to bottom, #FCFCFC 0%, #EBEBEB 100%);
 }
 
+.level {
+	width:50%;
+	padding: 15px 10px 0px 10px;
+	background: KHAKI;
+	margin:auto;
+}
+
 #level-2 {
 	width: 100%;
 	padding: 0px 10px 20px 10px;
@@ -183,6 +190,10 @@ z-index: 20;
 	margin-bottom: 175px;
 }
 
+.shnack {
+	font-family: "Damion", serif;
+	font-size:1.5em;
+}
 
 ul.info-links {
  	list-style: none;
@@ -275,4 +286,12 @@ input[type="tel"].error { border: 1px solid #780000  }
 	font-family: "Poiret One", Geneva, sans-serif;
 	color:#780000;
 
+}
+
+
+.caje-info {
+	font-size:2em;
+	color: dimgray;
+	font-family: "Poiret One", Geneva, sans-serif;
+	text-align:center;
 }
