--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -77,7 +77,7 @@
 				<span class="shnack">Shnack</span> is now being used at Caje<br />
 				<strong>Order ahead. Skip the line.</strong>
 				<br/>
-					<p> Every order enters you for the chance to win a Logitech Speaker System!
+					<span style="color:black; font-weight:900;"> Every order enters you for the chance to win a Logitech Speaker System! </span>
 			</div>
 		</div>
 
