--- a/app/views/orders/_display_mods.html.erb
+++ b/app/views/orders/_display_mods.html.erb
@@ -1,9 +1,9 @@
-<tbody id="all_item_mods">
+<tbody id="<%=item.id%>_mod" class="all_the_mods" style="background-color:#EEE;">
   <tr>
     <td colspan="5" style="text-align:center;"> <em>Customize this <%= item.name.capitalize %></em> </td>
   </tr>
   <% item.modifiers.each do |mod| %>
-    <tr id="<%=item.id%>_mods" class="item-modifier" style="border:none;outline:none;">
+    <tr class="item-modifier" style="border:none;outline:none;">
       <td class="modifier-name" colspan="5"> <strong> <%= mod.name.capitalize %> </strong></td>
       <% mod.options.each do |val| %>
         <tr>
@@ -11,16 +11,16 @@
           <td>+ <%= integer_to_currency val.price %></td>
 
           <% if mod.mod_type == 0 %>
-            <td> <span class="glyphicon glyphicon-plus plus"></span> </td>
-            <td id="<%=val.id%>_num" class="num"> 0 </td>
-            <td> <span class="glyphicon glyphicon-minus minus"></span> </td>
-            <td class="item_id hidden"> <%= val.id %> </td>
+            <td></td>
+            <td colspan="2">
+              <%= radio_button_tag("#{mod.name.downcase}", "#{val.name.downcase}") %>
+            </td>
           <%end%>
 
           <% if mod.mod_type == 1 %>
             <td></td>
             <td colspan="2">
-              <%= radio_button("#{val.name.downcase}", "#{val.name.downcase}", "no") %>
+              <%= radio_button_tag("#{mod.name.downcase}", "#{val.name.downcase}") %>
             </td>
           <%end%>
 
