--- a/app/views/shared/_order_details.html.erb
+++ b/app/views/shared/_order_details.html.erb
@@ -10,9 +10,9 @@
 			<td><%= @items[order_item.item_id].name %></td> 
 				<td><%= order_item.quantity %> </td>
 
-				<td> <%= Item.integer_to_currency @items[order_item.item_id].price %></td>
+				<td> <%= Item.integer_to_currency order_item.price %></td>
 				<%# update this below price to include the price of the item modifiers %>
-				<td> <%= Item.integer_to_currency(@items[order_item.item_id].price * order_item.quantity) %></td>
+				<td> <%= Item.integer_to_currency( order_item.price * order_item.quantity) %></td>
 			</tr>
 			<% if order_item.has_mods?; @order_item = order_item %>
 				<%= render :partial => 'shared/display_order_mods', :locals => { order_item: @order_item } %>
@@ -27,26 +27,26 @@
 					<td>Subtotal</td>
 					<td></td>
 					<td></td>
-					<td> <%= @order.integer_to_currency(@order.subtotal) %> </td>
+					<td> <%= Order.integer_to_currency(@order.subtotal) %> </td>
 				</tr>
 				<tr>
 					<td>Shnack Fee</td>
 					<td></td>
 					<td></td>
-					<td> <%= @order.integer_to_currency(@order.total-@order.subtotal) %></td>
+					<td> <%= Order.integer_to_currency(@order.total-@order.subtotal) %></td>
 				</tr>
 				<tr>
 					<td>Total</td>
 					<td></td>
 					<td></td>
-					<td> <%= @order.integer_to_currency(@order.total) %> </td>
+					<td> <%= Order.integer_to_currency(@order.total) %> </td>
 				</tr>
 			<% else %>
 				<tr>
 					<td>Total</td>
 					<td></td>
 					<td></td>
-					<td> <%= @order.integer_to_currency(@order.total) %> </td>
+					<td> <%= Order.integer_to_currency(@order.total) %> </td>
 				</tr>
 			<% end %> 	
 		</tfoot>
