added and removed validation for new charge

--- a/app/views/charges/new.html.erb
+++ b/app/views/charges/new.html.erb
@@ -35,7 +35,7 @@
             ></script>
         </div>
   <% end %>
-
+  <div class="error name-error" style="display:none;">Please enter your name or we won't be able to let you know when your order's ready!</div>
   <div class="error phone-error" style="display:none;">Please enter your phone number or we won't be able to let you know when your order's ready!</div>
 
 
