--- a/app/views/orders/_display_mods.html.erb
+++ b/app/views/orders/_display_mods.html.erb
@@ -5,7 +5,7 @@
   <% item.modifiers.each do |mod| %>
     <tr class="item-modifier" style="border:none;outline:none;">
       <td class="modifier-name" colspan="5"> <strong> <%= mod.name.capitalize %> </strong></td>
-      <% mod.options.each do |val| %>
+      <% mod.options.each_with_index do |val, ind| %>
         <tr>
           <td> <%= val.name.capitalize %> </td>
           <td>+ <%= Order.integer_to_currency val.price %></td>
@@ -14,7 +14,11 @@
             <td></td>
             <td colspan="2">
               <%#= radio_button_tag("#{mod.name.downcase}", "#{val.name.downcase}") %>
-              <input id="<%= mod.name.downcase %>_<%= val.name.downcase %>" name='<%= "#{item.id}_#{mod.id}" %>' class="<%="#{item.id}_modifier"%> modifier" type="radio" value="<%= val.id %>" data-add-price="<%= val.price %>">
+              <% unless ind == 0 %>
+                <input id="<%= mod.name.downcase %>_<%= val.name.downcase %>" name='<%= "#{item.id}_#{mod.id}" %>' class="<%="#{item.id}_modifier"%> modifier radio-mod-1" type="radio" value="<%= val.id %>" data-add-price="<%= val.price %>">
+              <% else %>
+              <input id="<%= mod.name.downcase %>_<%= val.name.downcase %>" name='<%= "#{item.id}_#{mod.id}" %>' class="<%="#{item.id}_modifier"%> modifier radio-mod-1" type="radio" value="<%= val.id %>" data-add-price="<%= val.price %>" checked>
+              <% end %>
             </td>
           <%end%>
 
@@ -22,7 +26,11 @@
             <td></td>
             <td colspan="2">
               <%#= radio_button_tag("#{mod.name.downcase}", "#{val.name.downcase}") %>
-              <input id="<%= mod.name.downcase %>_<%= val.name.downcase %>" name="<%= "#{item.id}_#{mod.id}" %>" class="<%="#{item.id}_modifier"%> modifier" type="radio" value="<%= val.id %>" data-add-price="<%= val.price %>">
+              <% unless ind == 0 %>
+              <input id="<%= mod.name.downcase %>_<%= val.name.downcase %>" name="<%= "#{item.id}_#{mod.id}" %>" class="<%="#{item.id}_modifier"%> modifier radio-mod-1" type="radio" value="<%= val.id %>" data-add-price="<%= val.price %>">
+              <% else %>
+              <input id="<%= mod.name.downcase %>_<%= val.name.downcase %>" name="<%= "#{item.id}_#{mod.id}" %>" class="<%="#{item.id}_modifier"%> modifier radio-mod-1" type="radio" value="<%= val.id %>" data-add-price="<%= val.price %>" checked>
+              <% end %>
             </td>
           <%end%>
 
