--- a/app/views/restaurants/_new_item_size.html.erb
+++ b/app/views/restaurants/_new_item_size.html.erb
@@ -1,15 +1,33 @@
 <table id="size_mod_table">
   <tbody>
     <tr>
-      <td> <%= text_field_tag :size_name_1, nil, :placeholder=>"Size 1 Name" %> </td>
-      <td> <%= text_field_tag :size_price_1, nil, :type=>"number", :placeholder=>"Price 1" %> </td>
+      <td colspan="2"> <%= text_field_tag :size_name_1, nil, :placeholder=>"Size 1 Name" %> </td>
+      <td colspan="2"> <%= text_field_tag :size_price_1, nil, :type=>"number", :placeholder=>"Price 1" %> </td>
     </tr>
-      <td> <%= text_field_tag :size_name_2, nil, :placeholder=>"Size 2 Name" %> </td>
-      <td> <%= text_field_tag :size_price_2, nil, :type=>"number", :placeholder=>"Price 2" %> </td>
+      <td colspan="2"> <%= text_field_tag :size_name_2, nil, :placeholder=>"Size 2 Name" %> </td>
+      <td colspan="2"> <%= text_field_tag :size_price_2, nil, :type=>"number", :placeholder=>"Price 2" %> </td>
     </tr>
     <tr>
-      <td> <%= text_field_tag :size_name_3, nil, :placeholder=>"Size 3 Name" %> </td>
-      <td> <%= text_field_tag :size_price_3, nil, :type=>"number", :placeholder=>"Price 3" %> </td>
+      <td colspan="2"> <%= text_field_tag :size_name_3, nil, :placeholder=>"Size 3 Name" %> </td>
+      <td colspan="2"> <%= text_field_tag :size_price_3, nil, :type=>"number", :placeholder=>"Price 3" %> </td>
     </tr>
+    <!-- <tr>
+      <td colspan="4"><em>Which option should be default?</em></td>
+    </tr>
+    <tr id="size_default">
+      <td>
+        <label for="first"><i>First</i></label>
+        <input type="radio" name="size_deafult" value="first"/>
+      </td>
+      <td>
+        <label for="first"><i>Second</i></label>
+        <input type="radio" name="size_deafult" value="second"/>
+      </td>
+      <td>
+        <label for="first"><i>Third</i></label>
+        <input type="radio" name="size_deafult"  value="third"/>
+      </td>
+      <td></td>
+    </tr> -->
   </tbody>
 </table>
