--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -109,7 +109,7 @@
 	<tr>
 		<td> <%= f.label :modifiers %></td>
 		<td>
-			<button type="button" id="size_mod_btn" data-mod-type="size">Add a custom option to item</button>
+			<button type="button" id="size_mod_btn" data-mod-type="size">Add a size option to item</button>
 			<%= render 'new_item_size' %>
 
 			<button type="button" id="single_select_mod_btn" data-mod-type="single">Add a single select option to item</button>
