5 mods and style

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -83,7 +83,7 @@
 				<span class="shnack">Shnack</span> is now being used at Caje<br />
 				<strong>Order ahead. Skip the line.</strong>
 				<br/>
-					<span style="color:black; font-weight:900;"> Every order enters you for the chance to win a Logitech Speaker System! </span>
+					<span style="color:#333; font-weight:900;"> Every order enters you for the chance to win a Logitech Speaker System! </span>
 			</div>
 		</div>
 
@@ -162,15 +162,18 @@
 
 
 				<div class="col-sm-6 center">
-		            <div id="fb-root"></div>
-		            </br></br>
-		            <p style="font-size:1.3em;">Follow us on Facebook.</br>You might see us at a game.</p>
-		            </br>
-		            <div class="fb-like" data-href="https://www.facebook.com/shnackapp" data-width="100" data-layout="button_count" data-action="like" data-show-faces="true" data-share="true"></div>
-	          	</div>
-	         </div>
+		      <div id="fb-root"></div>
+		      </br></br>
+		     	<p style="font-size:1.3em;">Follow us on Facebook.</br>You might see us at a game.</p>
+		      </br>
+		      <div class="fb-like" data-href="https://www.facebook.com/shnackapp" data-width="100" data-layout="button_count" data-action="like" data-show-faces="true" data-share="true"></div>
+	      </div>
+
+	      <div class="col-sm-6 center">
+	      	<%= image_tag("GEM.png", size: "300x190", alt: "Goleta Entrepreneurial Magnet") %>
+	      </div>
 	    </div>
-	    <!-- END FOOTER -->
+	  </div> <!-- END FOOTER -->
 
 
 </body>
