--- a/app/views/restaurants/_new_item_single_select.html.erb
+++ b/app/views/restaurants/_new_item_single_select.html.erb
@@ -15,6 +15,14 @@
       <td colspan="2"> <%= text_field_tag :ss_name_3, nil, :placeholder=>"Option 3 Name" %> </td>
       <td colspan="2"> <%= text_field_tag :ss_price_3, nil, :type=>"number", :placeholder=>"Price 3" %> </td>
     </tr>
+    </tr>
+      <td colspan="2"> <%= text_field_tag :ss_name_4, nil, :placeholder=>"Option 4 Name" %> </td>
+      <td colspan="2"> <%= text_field_tag :ss_price_4, nil, :type=>"number", :placeholder=>"Price 4" %> </td>
+    </tr>
+    <tr>
+      <td colspan="2"> <%= text_field_tag :ss_name_5, nil, :placeholder=>"Option 5 Name" %> </td>
+      <td colspan="2"> <%= text_field_tag :ss_price_5, nil, :type=>"number", :placeholder=>"Price 5" %> </td>
+    </tr>
     <!-- <tr>
       <td colspan="4"><em>Which option should be default</em></td>
     </tr>
