--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -56,16 +56,18 @@ p {
 
 .level {
 	width:50%;
-	padding: 15px 10px 0px 10px;
+	padding: 15px 10px 5px 10px;
 	background: KHAKI;
 	margin:auto;
-		box-shadow: 0px 0px 5px #888888;
-
+	box-shadow: 0px 0px 5px #888888;
+  border-top-right-radius: 40px 80px;
+  border-top-left-radius: 40px 80px;
 }
 
 #level-2 {
 	width: 100%;
 	padding: 0px 10px 20px 10px;
+  box-shadow: 0px 0px 20px black;
 	background-image: -webkit-gradient(
 		linear,
 		left top,
