--- a/app/views/orders/_display_mods.html.erb
+++ b/app/views/orders/_display_mods.html.erb
@@ -1,6 +1,6 @@
 <tbody id="<%=item.id%>_mod" class="all_the_mods" style="background-color:#EEE;">
   <tr>
-    <td colspan="5" style="text-align:center;"> <em>Customize this <%= item.name.capitalize %></em> </td>
+    <td colspan="5" style="text-align:center;"> <em>Customize this <%= item.name %></em> </td>
   </tr>
   <% item.modifiers.each do |mod| %>
     <tr class="item-modifier" style="border:none;outline:none;">
