--- a/app/views/shnack/index.html.erb
+++ b/app/views/shnack/index.html.erb
@@ -1,8 +1,8 @@
 Thanks for checking out Shnack!<br />
 Functionality coming soon! <br />
 
-<%= current_user.is_super ? "I am a super user" : "I am not a super user </3" %> <br />
-<%= current_user.role_type == 0 ? "I am a customer" : "I am a manager" %> <br />
+<%= current_user.is_super ? "I am a super user muhaha" : "I am not a super user </3" %> <br />
+<%= current_user.role_type == 0 ? "I am a customer" : "I am a manager ftw" %> <br />
 <% if current_user.is_manager? %>
  	I currently manage in <%= current_user.stadium.name %> 
  	<ul>
