--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -80,7 +80,7 @@
 
 		<div class="level">
 			<div class="container my-container caje-info">
-				<span class="shnack">Shnack</span> is now being used at Caje<br />
+				<span class="shnack">Shnack</span> is now being used at <soan class="caje">Caje</soan><br />
 				<strong>Order ahead. Skip the line.</strong>
 				<br/>
 					<span style="color:#333; font-weight:900;"> Every order enters you for the chance to win a Logitech Speaker System! </span>
