--- a/app/views/orders/_display_mods.html.erb
+++ b/app/views/orders/_display_mods.html.erb
@@ -1,12 +1,12 @@
-<tbody id="<%=item.id%>_mod" class="all_the_mods" style="background-color:#EEE;">
+<tbody id="<%=item.id%>_mod" class="all_the_mods">
   <tr>
-    <td colspan="5" style="text-align:center;"> <em>Customize this <%= item.name %></em> </td>
+    <td colspan="5" style="text-align:center;" class="customize-this"> <em>Customize this <%= item.name %></em> </td>
   </tr>
   <% item.modifiers.each do |mod| %>
     <tr class="item-modifier" style="border:none;outline:none;">
       <td class="modifier-name" colspan="5"> <strong> <%= mod.name.capitalize %> </strong></td>
       <% mod.options.each_with_index do |val, ind| %>
-        <tr>
+        <tr class="opt-name">
           <td> <%= val.name.capitalize %> </td>
           <td>+ <%= Order.integer_to_currency val.price %></td>
 
