--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -22,7 +22,7 @@
     <% if @menu.categories.count > 1 %>
 
       <% @menu.categories.each do |category| %>
-        <div class="panel-heading" style="background-color:#555;color:white;"><h3 class="panel-title"><%= category.name %></h3></div>
+        <div class="panel-heading" style="cursor:pointer;background-color:#555;"><h3 class="panel-title"><%= category.name %></h3></div>
         <div class="order-items" style="display:none;">
           <table cellspacing="10" class="table">
 
