--- a/app/views/restaurants/recent_orders.html.erb
+++ b/app/views/restaurants/recent_orders.html.erb
@@ -5,7 +5,7 @@
 		<th></th>
 		<th> Amount </th>
 		<th> Funds Available? </th>
-	<% @orders.reverse.each do |order| %>
+	<% @orders.where(:paid => true).reverse.each do |order| %>
 		<tr>
 			<td> Order #<%= order.order_number %> </td>
 			<td> <%= order.integer_to_currency(order.total) %> </td>
