--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -54,6 +54,26 @@ p {
 	background-image: linear-gradient(to bottom, #FCFCFC 0%, #EBEBEB 100%);
 }
 
+@media only screen 
+and (max-width : 320px) {
+
+  .level {
+    width:100%;
+    padding: 15px 10px 5px 10px;
+    background: KHAKI;
+    margin:auto;
+    box-shadow: 0px 0px 5px #888888;
+  }
+
+  .caje-info {
+    font-size:1.5em;
+    color: dimgray;
+    font-family: "Poiret One", Geneva, sans-serif;
+    text-align:center;
+  }
+
+}
+
 .level {
 	width:50%;
 	padding: 15px 10px 5px 10px;
@@ -63,6 +83,8 @@ p {
   border-top-right-radius: 40px 80px;
   border-top-left-radius: 40px 80px;
 }
+
+
 
 #level-2 {
 	width: 100%;
