--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -2,9 +2,12 @@
 
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
+  <div> <%= f.text_field :name, :placeholder => 'Name' ,:autofocus => true %> </div>
+  <div> <%= f.text_field :number, :placeholder => 'Phone Number' %> </div>
+
 
   <div>
-  <%= f.email_field :email, :placeholder => 'Email Address',:autofocus => true %></div>
+  <%= f.email_field :email, :placeholder => 'Email Address' %></div>
 
   <div>
   <%= f.password_field :password, :placeholder => 'Password' %></div>
