--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -57,13 +57,17 @@ p {
 
 
 .level {
-	width:50%;
+	width:60%;
 	padding: 15px 10px 5px 10px;
 	background: KHAKI;
 	margin:auto;
 	box-shadow: 0px 0px 5px #888888;
   border-top-right-radius: 40px 80px;
   border-top-left-radius: 40px 80px;
+
+  @media (max-width: 800px) {
+    width: 90%;
+  }
 }
 
 
