minor ui stlyes

--- a/app/views/orders/_display_mods.html.erb
+++ b/app/views/orders/_display_mods.html.erb
@@ -1,6 +1,6 @@
 <tbody id="<%=item.id%>_mod" class="all_the_mods">
   <tr>
-    <td colspan="5" style="text-align:center;" class="customize-this"> <em>Customize this <%= item.name %></em> </td>
+    <td colspan="5" class="customize-this">Customize this <%= item.name %></td>
   </tr>
   <% item.modifiers.each do |mod| %>
     <tr class="item-modifier" style="border:none;outline:none;">
