--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -163,19 +163,13 @@ p {
   }
 }
 
-.coffee-mug {
-  //position: absolute;
-    background-image: image-url('coffee_mug.png');
-    background-repeat:no-repeat;
-    background-position: center;
-
-}
-
 tbody.all_the_mods tr {
 
     td.customize-this {
       background-color: #EEE;
-      color: #C55;
+      color: #333;
+      text-align:center;
+      font-style: italic;
     }
 
     &.item-modifier {
@@ -258,8 +252,8 @@ z-index: 20;
 }
 
 .caje {
-  font-family: "Georgia", serif;
   font-size:1.5em;
+  font-weight: bold;
 }
 
 ul.info-links {
