--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -83,7 +83,7 @@
 				<span class="shnack">Shnack</span> is now being used at <soan class="caje">Caje</soan><br />
 				<strong>Order ahead. Skip the line.</strong>
 				<br/>
-					<span style="color:#333; font-weight:900;"> Every order enters you for the chance to win a Logitech Speaker System! </span>
+					<span style="color:#333; font-weight:900;"> Every order enters you for the chance to win a new Logitech Speaker System! </span>
 			</div>
 		</div>
 
