--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -54,6 +54,39 @@ p {
 	background-image: linear-gradient(to bottom, #FCFCFC 0%, #EBEBEB 100%);
 }
 
+input[type="radio"] {
+  
+  opacity: 0;
+  margin: 12px 5px;
+  width:20px;
+  position:absolute;
+
+}
+
+input[type="radio"] + label {
+  
+  display:inline-block;
+    background-color: $shnackred;
+    border-radius:50px;
+    padding:10px;
+  
+}
+
+input[type=radio]:checked + label { 
+   background-image: none;
+    background-color:white;
+    border: 3px solid;
+    border-color: $shnackred;
+}
+
+input[type=radio]:checked + label::after {
+ 
+ background-image: none;
+    background-color:white;
+    position:absolute;
+    top: 3px;
+    left: 3px; 
+}
 
 
 .level {
